--- a/hyperion_ng/config.yaml
+++ b/hyperion_ng/config.yaml
@@ -1,6 +1,6 @@
 name: "Hyperion.NG"
 slug: "hyperion_ng"
-description: "Hyperion.NG with Home Assistant Ingress."
+description: "Runs Hyperion.NG using sirfragalot/hyperion.ng (host network, no ingress)."
 version: "latest"
 url: "https://hub.docker.com/r/sirfragalot/hyperion.ng"
 
@@ -12,21 +12,21 @@ arch:
 image: "sirfragalot/hyperion.ng"
 host_network: true
 
-# Persist Hyperion config
+# Expose UI + services (even with host networking, this documents the ports in HA)
+ports:
+  8090/tcp: 8090
+  19444/tcp: 19444
+  19445/tcp: 19445
+
+ports_description:
+  8090/tcp: "Hyperion Web UI"
+  19444/tcp: "Hyperion JSON Server"
+  19445/tcp: "Hyperion Proto Server"
+
 map:
   - type: addon_config
     read_only: false
     path: /root/.hyperion
-
-# Ingress (this is what makes it work inside HA)
-ingress: true
-ingress_port: 8090
-ingress_entry: "/"
-ingress_stream: true
-
-# Optional: show it in the left sidebar
-panel_title: "Hyperion"
-panel_icon: "mdi:led-strip-variant"
 
 startup: application
 boot: auto
