--- a/hyperion_ng/config.yaml
+++ b/hyperion_ng/config.yaml
@@ -27,6 +27,9 @@ map:
   - type: addon_config
     read_only: false
     path: /root/.hyperion
+  - type: certs
+    read_only: true
+    path: /ssl
 
 startup: application
 boot: auto
